[package]
name = "rustlatin"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bencher = "0.1.5"
lazy_static = "1.4.0"
packed_simd_2 = "0.3.8"
rayon = "1.7.0"

[[bench]]
name = "rustlatin"
harness = false
